# bitpromo-python-api

./: .config.yaml  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  schemas.py
app/routes/: embeddings.py  recomendacao.py
chroma_db_data/: chroma.sqlite3
core/: init_config.py
db/: bitpromo.sql  schema_bit_promo.sql
