[project]
name = "bitpromo-python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "cryptography>=46.0.3",
    "faker>=38.2.0",
    "fastapi>=0.122.0",
    "instructor>=1.13.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
